objects/copado__Selenium_Group_Variable__c.object
<CustomObject>
    <fields>
        <fullName>copado__Display_Value__c</fullName>
        <formula>if( copado__Hide_Value__c, &quot;*****&quot;, copado__Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this Checkbox to hide the value in the Test Group related list.</inlineHelpText>
        <label>Hide Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Group__c</fullName>
        <label>Selenium Test Group</label>
        <referenceTo>copado__Selenium_Test_Group__c</referenceTo>
        <relationshipLabel>Selenium Group Variables</relationshipLabel>
        <relationshipName>Selenium_Group_Variables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Selenium Group Variable is valid only within this Selenium Group.  On Test Cases, a variable can be referred to as {!Group.VARIABLE_NAME}.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Selenium Group Variable</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Selenium Group Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Group Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>